WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184683
Release assert in InjectedBundle::postSynchronousMessage
https://bugs.webkit.org/show_bug.cgi?id=184683
Summary
Release assert in InjectedBundle::postSynchronousMessage
Ryosuke Niwa
Reported
2018-04-17 00:21:10 PDT
We need to make InjectedBundle::postSynchronousMessage use DoNotProcessIncomingMessagesWhenWaitingForSyncReply <
rdar://problem/39393988
>
Attachments
Fixes the bug
(2.26 KB, patch)
2018-04-17 00:49 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews202 for win-future
(12.14 MB, application/zip)
2018-04-17 02:32 PDT
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2018-04-17 00:49:52 PDT
Created
attachment 338085
[details]
Fixes the bug
EWS Watchlist
Comment 2
2018-04-17 00:51:10 PDT
Attachment 338085
[details]
did not pass style-queue: ERROR: Source/WebKit/WebProcess/InjectedBundle/InjectedBundle.cpp:141: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
EWS Watchlist
Comment 3
2018-04-17 02:32:29 PDT
Comment on
attachment 338085
[details]
Fixes the bug
Attachment 338085
[details]
did not pass win-ews (win): Output:
http://webkit-queues.webkit.org/results/7341503
New failing tests: http/tests/security/contentSecurityPolicy/userAgentShadowDOM/allow-video.html
EWS Watchlist
Comment 4
2018-04-17 02:32:40 PDT
Created
attachment 338094
[details]
Archive of layout-test-results from ews202 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews202 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Ryosuke Niwa
Comment 5
2018-04-17 14:54:44 PDT
Comment on
attachment 338085
[details]
Fixes the bug Clearing flags on attachment: 338085 Committed
r230729
: <
https://trac.webkit.org/changeset/230729
>
Ryosuke Niwa
Comment 6
2018-04-17 14:54:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug