Release assert in InjectedBundle::postSynchronousMessage https://bugs.webkit.org/show_bug.cgi?id=184683

Reviewed by Wenson Hsieh.

Some injected bundles sends sync message when it's not safe to execute scripts.

Use DoNotProcessIncomingMessagesWhenWaitingForSyncReply option in InjectedBundle::postSynchronousMessage
to avoid processing incoming sync IPC messages so that we don't execute arbitrary scripts in those cases.

* WebProcess/InjectedBundle/InjectedBundle.cpp:
(WebKit::InjectedBundle::postSynchronousMessage):


Canonical link: https://commits.webkit.org/200218@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230729 268f45cc-cd09-0410-ab3c-d52691b4dbfc